ДЗ после правок

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <span class="first-part">Web</span><span class="second-part">Studio</span>
           </a>
           <ul class="nav-list list">
-            <li class="nav-list-item"><a href="./index.html" class="header-nav-link link">Студія
+            <li class="nav-list-item"><a href="./index.html" class="header-nav-link link current">Студія
               </a></li>
-            <li class="nav-list-item"><a href="./portfolio.html" class="header-nav-link link current">Портфоліо</a></li>
+            <li class="nav-list-item"><a href="./portfolio.html" class="header-nav-link link">Портфоліо</a></li>
             <li class="nav-list-item"><a href="#" class="header-nav-link link">Контакти</a></li>
           </ul>
         </nav>
@@ -38,7 +38,7 @@
               </svg>info@devstudio.com</a>
           </li>
           <li class="header-group-item"><a class="contacts-links header-tel link" href="tel:+380961111111"><svg
-                class="contacts-icon" width="16" height="12">
+                class="contacts-icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>+38 096 111 11 11</a>
           </li>
@@ -54,7 +54,7 @@
         </div>
         </section>
 
-        <section class="section">
+        <section class="section feauters">
             <div class="container">
               <h2 class="visually-hidden">Переваги</h2>
               <ul class="advantage-list list">
@@ -355,8 +355,9 @@
             </ul>
           </address>
           </section>
-          <section class="footer-social">
-      <h3 class="footer-social-title">приєднуйтесь</h3>
+
+          <div class="footer-social">
+      <p class="footer-social-title">приєднуйтесь</p>
       <ul class="footer-socials-list list">
         <li class="socials-item">
           <a class="footer-socials-link link" href="https://instagram.com" target="_blank" rel="nofollow noopener noreferrer"
@@ -391,7 +392,7 @@
           </a>
         </li>
       </ul>
-  </section>
+  </div>
   </div>
   </div>
 </footer>
