--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
               </svg>info@devstudio.com</a>
           </li>
           <li class="header-group-item"><a class="contacts-links header-tel link" href="tel:+380961111111"><svg
-                class="contacts-icon" width="16" height="12">
+                class="contacts-icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>+38 096 111 11 11</a>
           </li>
@@ -66,8 +66,8 @@
 
          
             <ul class="portfolio-list list">
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project1.jpg" alt="website" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title link">Технокряк</h2>
@@ -75,8 +75,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project2.jpg" alt="design" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title link">Постер New Orlean vs Golden Star</h2>
@@ -84,8 +84,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project3.jpg" alt="app" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -93,8 +93,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project4.jpg" alt="marketing" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Проєкт Prime</h2>
@@ -102,8 +102,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project5.jpg" alt="app" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Проєкт Boxes</h2>
@@ -111,8 +111,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project6.jpg" alt="website" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -120,8 +120,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project7.jpg" alt="design" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Видання Limited Edition</h2>
@@ -129,8 +129,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project8.jpg" alt="marketing" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Проєкт LAB</h2>
@@ -138,8 +138,8 @@
                   </div>
                 </a>
               </li>
-              <li class="portfolio-card">
-                <a href="#">
+              <li class="portfolio-list-item">
+                <a class="portfolio-card" href="#">
                   <img src="./images/project9.jpg" alt="app" width="370" />
                   <div class="portfolio-describe">
                     <h2 class="portfolio-title">Growing Business</h2>
@@ -173,8 +173,8 @@
             </address>
           </section>
       
-          <section class="footer-social">
-            <h3 class="footer-social-title">приєднуйтесь</h3>
+          <div class="footer-social">
+            <p class="footer-social-title">приєднуйтесь</p>
             <ul class="footer-socials-list list">
               <li class="socials-item">
                 <a class="footer-socials-link link" href="https://instagram.com" target="_blank"
@@ -209,7 +209,7 @@
                 </a>
               </li>
             </ul>
-          </section>
+          </div>
           </div>
           </div>
         </footer>
